copied an old commit to squash some bugs.  Adjusted breakpoints for cards and index text.

--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,7 @@ p {
 .pug-img{
     height:208px;
 }
+
 .swirl-card {
     margin-top: 120px;
 }
-
-@media (min-width: 768px) {
-    .container {
-      max-width: 720px;
-    }
-  }
